2013-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/symbol.h (END) [__arm__]: New macros. Replace all .end
	occurencies with END.

2013-11-13  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-editenv.c (help_filter, argp): Document how to delete
	the whole environment block.
	Reported by Dan Jacobson.  Fixes Debian bug #726265.

2013-11-13  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Internationalisation, Supported kernels): Fix
	sectioning.

2013-11-13  Josh Triplett <josh@joshtriplett.org>

	* grub-core/normal/term.c (grub_set_more): Use bool logic rather than
	increment/decrement.

2013-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/arm/cache_armv6.S [__clang__]: Don't add .armv6 when
	compiling with clang.

2013-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/arm/uboot/startup.S: Use .org rather than assigning
	".".

2013-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Redirect all divisions to grub_divmod64.

2013-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/tparm.c (tparam_internal): Use unsigned divisions.

2013-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Add missing includes of loader.h.

2013-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Allow disabling themes.

2013-11-12  Lukas Schwaighofer <lukas@schwaighofer.name>

	* util/grub.d/20_linux_xen.in: Don't decompress initrd.

2013-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/at_keyboard.c: Don't poll non-functional AT controller
	until it becomes operational.

2013-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (legacy_password_test): Disable
	on platforms where no legacycfg is compiled.
	* grub-core/tests/lib/functional_test.c: Tolerate failure to
	load legacy_password_test.

2013-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/bsd.c: Remove variable length arrays.
